# TorchCrepe

./: .gitignore  README.md  crepe-tiny.pth  crepe.py  dataset.py  pyproject.toml  requirements.py  requirements.txt  test_model.ipynb  train.py  trainer.py  utils.py
.github/workflows/: CD.yml  CI.yml
achives/: crepe1.py  test.ipynb  trainer.py  utils.py
archives/archives-1/: README.md  crepe-tiny.pth  crepe1.py  streamlit_app.py
archives/archives-2/: .gitignore  crepe.py  train.py  utils.py
crepe/: crepe-tiny.pth  crepe_tiny_best.pth  dataset.py  model.py  utils.py
notebooks/: dataset.ipynb  model.ipynb  train.ipynb  usecrepe.ipynb  utils.ipynb
scripts/: package_change_version.sh  package_generate_doc.sh  virtualenv_create.sh
